# glyph-grid-studio

./: .gitignore  AGENT-INTEGRATION-PLAN.md  BUGS_AND_ITERATIONS.md  CARMACK-KARPATHY-PLAN.md  OPTIMIZATION-AUDIT-CARMACK.md  OPTIMIZATION-LOOP-PLAN.md  OPTIMIZATION-LOOP-RESEARCH.md  OPTIMIZATION-PLAN.md  PRE-PUBLIC-CHECKLIST.md  PUBLIC-LAUNCH-PLAN.md  README.md  RELEASING.md  TEST-PLAN-V0.1.md  TODO.md  USER-GUIDE.md  WEBGL-RENDERER-DESIGN.md  package.json
Casks/: glyph-grid-studio.rb
docs/: index.html  kawaii.md  mcp.md  workflow-reflection.md
scripts/loop_orchestrator/: .gitignore  README.md  benchmark.py  decide.py  gen_synthetic_sources.py  install-hooks.sh  optimization-backlog-round6.yaml  optimization-backlog.yaml  orchestrator.py  patch_runner.py  recovery.py  requirements.txt  score_ssim.py
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mcp.rs
src/fonts/: LICENSE
src/glyph-sets/: ascii.json  asciiDense.json  blockElements.json  braille.json  octant.json  sextant.json
src/lib/: glyph-compat.js  glyph-composition.js  glyph-crt.js  glyph-dither.js  glyph-edge.js  glyph-fonts.js  glyph-outputs.js  glyph-palette-morph.js  glyph-polish.js  glyph-primitives.js  glyph-record.js  glyph-runtime.js  glyph-sampling.js  glyph-shape-index.js  glyph-sources.js  glyph-studio.js  glyph-wave6.js  glyph-xdog.js
tests/: GUI-TEST-PLAN.md  PERF-AFTER.md  PERF-BASELINE.md  RESULTS-V0.1.md  SPARKY-RESULTS.md  mcp.py  run-all.sh
