[package]
name = "glyph-grid-studio"
version = "0.1.0"
description = "Real-time character-grid image renderer (GUI + CLI + MCP)"
authors = ["Joona Tyrninoksa"]
license = "MIT"
repository = "https://github.com/Joona-t/glyph-grid-studio"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
base64 = "0.22"
gif = "0.13"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff"] }
color_quant = "1.1"
clap = { version = "4", features = ["derive"] }
