[package]
name = "glyph-grid-studio"
version = "0.1.0"
description = "Real-time character-grid image renderer (GUI + CLI + MCP)"
authors = ["Joona Tyrninoksa"]
license = "MIT"
repository = "https://github.com/Joona-t/glyph-grid-studio"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# Devtools (Cmd+Opt+I) are gated behind a Cargo feature so production
# releases don't ship them. Build with devtools via:
#   cargo tauri build --features dev-tools
#   cargo tauri dev   (default features include dev-tools per [features])
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
base64 = "0.22"
gif = "0.13"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff"] }
color_quant = "1.1"
clap = { version = "4", features = ["derive"] }

# T3 — MCP server (glyph-grid-studio mcp). Stdio JSON-RPC; each tool call
# spawns a subprocess that reuses the headless `render` CLI.
rmcp = { version = "1.6", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
schemars = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
gifski = "1.34.0"
imgref = "1.12.1"
rgb = "0.8.53"

[features]
# When enabled, Cmd+Opt+I opens the WebKit inspector. Default OFF for
# production builds. `cargo tauri dev` enables it via DEFAULT below.
dev-tools = ["tauri/devtools"]
default = []
